// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmComponent should show question 1`] = `
<app-confirm
  data={[Function Object]}
  dialogRef={[Function Object]}
  question={[Function String]}
  rejectText={[Function String]}
  successText={[Function String]}
>
  <div
    class="mat-dialog-content"
    mat-dialog-content=""
  >
    <p>
      How do you do?
    </p>
  </div><div
    class="mat-dialog-actions"
    mat-dialog-actions=""
  >
    <button
      cdkfocusinitial=""
      class="mat-button"
      mat-button=""
    >
      <span
        class="mat-button-wrapper"
      >
        No Thanks
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="[object HTMLButtonElement]"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </button>
    <button
      aria-label="Close dialog"
      class="mat-button"
      mat-button=""
      ng-reflect-dialog-result="true"
      type="button"
    >
      <span
        class="mat-button-wrapper"
      >
        Ok
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="[object HTMLButtonElement]"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </button>
  </div>
</app-confirm>
`;

exports[`ConfirmComponent should show question 2`] = `
<app-confirm
  data={[Function Object]}
  dialogRef={[Function Object]}
  question={[Function String]}
  rejectText={[Function String]}
  successText={[Function String]}
>
  <div
    class="mat-dialog-content"
    mat-dialog-content=""
  >
    <p>
      Are you a web developer?
    </p>
  </div><div
    class="mat-dialog-actions"
    mat-dialog-actions=""
  >
    <button
      cdkfocusinitial=""
      class="mat-button"
      mat-button=""
    >
      <span
        class="mat-button-wrapper"
      >
        No Thanks
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="[object HTMLButtonElement]"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </button>
    <button
      aria-label="Close dialog"
      class="mat-button"
      mat-button=""
      ng-reflect-dialog-result="true"
      type="button"
    >
      <span
        class="mat-button-wrapper"
      >
        Ok
      </span>
      <div
        class="mat-button-ripple mat-ripple"
        matripple=""
        ng-reflect-centered="false"
        ng-reflect-disabled="false"
        ng-reflect-trigger="[object HTMLButtonElement]"
      />
      <div
        class="mat-button-focus-overlay"
      />
    </button>
  </div>
</app-confirm>
`;
